Added images and gallery content

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -127,20 +128,6 @@
                         <p class="text-muted">Chips made from coconut husks</p>
                     </div>
                 </div>
-                <!-- <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/650_gm_coco_block.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>650gm Coco Block</h4>
-                        <p class="text-muted">Text to support description of Coco block</p>
-                    </div>
-                </div> -->
                 <div class="col-md-6 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -152,7 +139,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>5 Kg Coco Block</h4>
-                        <p class="text-muted">Text to support description of Coco block</p>
+                        <p class="text-muted">5 Kg Coco block</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 portfolio-item">
@@ -166,7 +153,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>125kg Fibre Bale</h4>
-                        <p class="text-muted">Text to support description of Fibre Bale</p>
+                        <p class="text-muted">Fibre Bale</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 portfolio-item">
@@ -180,7 +167,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Coco Bricks</h4>
-                        <p class="text-muted">Text to support description of Coco block</p>
+                        <p class="text-muted">Coco block</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 portfolio-item">
@@ -194,76 +181,84 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Coco Loose bags</h4>
-                        <p class="text-muted">Text to support description of Loose Bags</p>
+                        <p class="text-muted">Loose Bags</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- <section id="groupofc">
+
+    <!-- Gallery Section -->
+    <section id="gallery" class="bg-white">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Companies</h2>
-                    <h3 class="section-subheading text-muted">Terra LLC Group of Companies - Manufacturers and Exporters of Coir Based Products</h3>
+                    <h2 class="section-heading">Gallery</h2>
+                    <h3 class="section-subheading text-muted">Explore our factory and products</h3>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>SS Coir</h4>
-                                    <h4 class="subheading">Commencement in 2004</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">We are leading manufacturers of Coir Rope, Coir Husk Chips, Coir Pith Block, Coconut, Coir 650g Block and Coir Fiber from Pollachi, India.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                            <a href = 'https://www.msdcoir.com'>    <img class="img-circle img-responsive" src="img/msd_logo.jpg" alt=""></a>
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>MSD Coir</h4>
-                                    <h4 class="subheading">Commencement in 2017</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">MSD coir was started with a motto 'Save nature and create value'. From the start, we have been keen in producing coir products that are safe to use.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Nambu Coir Private Limited</h4>
-                                    <h4 class="subheading">Commencement in 2020</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Located in Southern part of India, We are involved in manufacturing and exporting Coir products and supply them to end customers ensuring high quality and timely delivery</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4><br />We are here!</h4>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div class="row gallery-grid"></div>
         </div>
-    </section> -->
+    </section>
+
+    <!-- jQuery (required for Fancybox) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- Fancybox JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            const imageFolder = "img/";
+            const allImages = [
+                "factory1.jpeg", "factory2.jpeg", "factory3.jpeg", "factory4.jpeg",
+                "factory5.jpeg", "factory6.jpeg", "factory7.jpeg", "factory8.jpeg",
+                "factory9.jpeg", "factory10.jpeg", "factory11.jpeg", "factory12.jpeg",
+                "factory13.jpeg", "factory14.jpeg", "factory15.jpeg", "factory16.jpeg",
+                "factory17.jpeg", "factory18.jpeg", "factory19.jpeg", "factory20.jpeg",
+                "factory21.jpeg", "factory22.jpeg",
+                "factory23.jpeg", "factory24.jpeg", "factory25.jpeg", "factory26.jpeg",,
+            ];
+
+            const galleryContainer = $('.gallery-grid');
+
+            allImages.forEach((img, index) => {
+                const imagePath = imageFolder + img;
+                const imageElement = `
+                    <div class="col-md-3 col-sm-4 col-xs-6 gallery-item">
+                        <a href="${imagePath}" data-fancybox="gallery" data-caption="Image ${index + 1}">
+                            <img src="${imagePath}" class="img-responsive" alt="${img}">
+                        </a>
+                    </div>`;
+                galleryContainer.append(imageElement);
+            });
+
+            // Initialize Fancybox
+            Fancybox.bind("[data-fancybox='gallery']", {
+                loop: true
+            });
+        });
+    </script>
+
+    <style>
+        .gallery-item {
+            padding: 10px;
+        }
+        .gallery-item img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 5px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.2s ease-in-out;
+        }
+        .gallery-item img:hover {
+            transform: scale(1.05);
+        }
+    </style>
+
+
 	
      <section id="contact">
         <div class="container">
@@ -344,16 +339,6 @@
                             <h2>Coco Grow Bags</h2>
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive" src="img/coco_grow_bags.jpg" alt="">
-                            <!-- <p>Nambu coir grow bags
-                                come with a compressed coconut coir block
-                                that when hydrated expands to the perfect
-                                height to fill the bag . It provides excellent
-                                aeration and irrigation facilities for the growth
-                                of Plants. These grow bags are made from
-                                high-quality coconut coir, which is a
-                                renewable and sustainable material that
-                                provides excellent water retention, aeration,
-                                and drainage. </p> -->
                                 <p class="item-intro text-muted">Advantages and Applications</p>
                             <p>
                                 Nambu coir grow bags
@@ -408,13 +393,6 @@
                                 and then drying and compressing them into blocks. This process ensures that the coco chips
                                 are free from impurities and contaminants, making them an ideal substrate for horticultural and
                                 agricultural applications.</p>
-                            <!-- <p>One of the key benefits of Nambu Coir Coco Chips is their high water holding capacity and their
-                                sustainability. This allows the substrate to retain moisture for longer periods of time, reducing
-                                the frequency of watering needed for plants. Additionally, Nambu Coir Coco Chips provide
-                                excellent aeration to plants, which is essential for healthy root growth and preventing root rot.
-                                Coconut husks are a renewable resource that is widely available in tropical regions around the
-                                world. By using coconut husks as a growing medium, Nambu Coir is able to promote
-                                sustainable agriculture practices and reduce waste.</p> -->
                                 <p class="item-intro text-muted">Advantage and Application</p>
                                 <p>Nambu Coir Coco Chips are a high-quality and sustainable substrate that can help improve
                                 plant growth and promote sustainable agriculture practices and are ideal for use in a variety of
@@ -448,8 +426,6 @@
                             <h2>650gm Coco Block</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                             <img class="img-responsive img-centered" src="img/coco.png" alt="">
-                            <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -546,16 +522,6 @@
                             <h2>Coco Bricks</h2>
                             <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
                             <img class="img-responsive" src="img/coco_grow_bags.jpg" alt="">
-                            <!-- <p>Nambu coir grow bags
-                                come with a compressed coconut coir block
-                                that when hydrated expands to the perfect
-                                height to fill the bag . It provides excellent
-                                aeration and irrigation facilities for the growth
-                                of Plants. These grow bags are made from
-                                high-quality coconut coir, which is a
-                                renewable and sustainable material that
-                                provides excellent water retention, aeration,
-                                and drainage. </p> -->
                                 <p class="item-intro text-muted">Advantages and Applications</p>
                             <p>
                                 Nambu coir offers
