Update header to point to gallery

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#portfolio">Products</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#groupofc">Machinery and Equipment</a>
+                        <a class="page-scroll" href="#gallery">Machinery and Equipment</a>
                     </li>                    
                     <li>
                         <a class="page-scroll" href="#contact">Contact us</a>
